# IAProyecto

./: .gitignore  Makefile  README.md  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
src/: app.py  chat_utils.py  rag.py  system_prompt.py
