[project]
name = "chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.9",
    "debugpy>=1.8.14",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "ollama>=0.4.8",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
]
